--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
 <html class="h-100">
 
 <head>
-    <title>Codeday Blog</title>
+    <title>CodeDay Blog</title>
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
@@ -90,7 +90,7 @@
             let messages = document.getElementById('msg');
             let alert = new bootstrap.Alert(messages);
             alert.close();
-        }, 2500);
+        }, 2000);
     </script>
 </body>
 
